# AI-CLI-Tool

./: LICENSE  README.md  pyproject.toml
assistant/: main.py
assistant/openai_local/utils/: system_prompt_handling.py
